# TerrainEngine

./: .gitignore  CLAUDE.md  CMakeLists.txt  Modelfile  TerrainSandbox  camera.h  interface-contract.md  main.cpp  main.frag.glsl  main.vert.glsl  shader.h  terrain.frag.glsl  terrain.vert.glsl  terrainEngine  wall
.omc/state/: last-tool-error.json
sandbox/: main.cpp  terrain.vert.glsl
shaders/: skybox.frag  skybox.vert  terrain.frag  terrain.vert
src/: Camera.cpp  Camera.h  Shader.cpp  Shader.h  SkyBox.cpp  SkyBox.h  TerrainRenderer.cpp  TerrainRenderer.h  gl3w.cpp  gl3w.h  glad.c  main.cpp
src/.omc/state/: last-tool-error.json
